<?xml version="1.0"?>
<package format="2">
  <name>theta_driver</name>
  <version>0.0.0</version>
  <description>The theta_driver package</description>
  <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>
