<?xml version="1.0"?>
<package format="2">
  <name>theta_driver</name>
  <version>0.0.0</version>
  <description>The theta_driver package</description>
  <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>
  <depend>libuvc-dev</depend>
  <depend>boost</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
